--- a/src/sagaco/CitaBundle/Resources/views/clAgenda/index.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clAgenda/index.html.twig
@@ -15,7 +15,13 @@
     {% block twigformulario %}
         <fieldset>
             {# Titulo del requisito #}
-            <legend>Visualizar agenda personalizada</legend>               
+            <legend>Visualizar agenda personalizada
+            <div class="pull-right">
+                        <a href="{{ path('pgAgenda_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Configurar agenda">
+                            <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+                        </a>                          
+                    </div>
+            </legend>               
 
             {#Muestra los campos del formulario#}
             <div class='form-horizontal'>
@@ -69,7 +75,7 @@
                         {% set j = 1 %}                       
                         
                         {% set cFin = 36000/(tiempo*60) %}                          
-                        {% for detalle in objEntidad.coDetallAgendaorientador %}
+                        {% for detalle in objEntidad.detallAgenda %}
                             {% set cIni = 1 %}
                             {% if hora|date('h:i a') != detalle.hoInicio|date('h:i a') %} 
                                 {% if detalle.hoInicio|date('h:i a') > hora|date('h:i a')%}
