--- a/src/sagaco/CitaBundle/Resources/views/clAgenda/registrar.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clAgenda/registrar.html.twig
@@ -15,17 +15,26 @@
     {% block twigformulario %}
         <fieldset>
             {# Titulo del requisito #}
-            <legend>Configurar agenda personalizada</legend> 
+            <legend>Configurar agenda personalizada
+                <div class="pull-right">
+                    <a href="{{ path('pgAgenda') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
+                        <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
+                    </a>                       
+                </div>
+            </legend> 
+            {#Muestra los campos del formulario#}
             {{ form_start(form, { 'style': 'horizontal' }) }}
             {{ form_errors(form, { 'global_errors': true }) }}
-            {{ form_row(form._token) }}
-            {#Muestra los campos del formulario#}
+            {{ form_row(form._token) }}            
             {{ form_row(form.coOrientador, {'label': 'Orientador'}) }}
             {{ form_row(form.coSemestre, {'label': 'Semestre'}) }}
-            {{ form_row(form.coDuracion, {'label': 'Duración de sesión'}) }}
-            <h3>Horario</h3>
-            {{ form_row(form.detallAgenda) }}
-            
+            {{ form_row(form.coDuracion, {'label': 'Duración de sesión'}) }}  
+            {#Muestra los campos del detalle#}
+            {{ form_row(form.detallAgenda, {'label': 'Horario'}) }}            
+            <div>
+                <p class="text-left">
+                    <small class="text-muted">(</small><small class="text-muted text-danger">*</small><small class="text-muted">) Campos obligatorios</small></p>
+            </div>            
             {{ form_end(form) }}
                                                  
         </fieldset>   
