Index, Mostrar y Editar Agenda-Detalle Signed-off-by:Jorge Duque <jyduque@unet.edu.ve>

--- a/src/sagaco/CitaBundle/Resources/views/clAgenda/mostrar.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clAgenda/mostrar.html.twig
@@ -20,7 +20,7 @@
                     <a href="{{ path('pgAgenda') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
                         <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
                     </a> 
-                    <a href="{{ path('pgAgenda', { 'id': objEntidad.coAgendaOrientador }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
+                    <a href="{{ path('pgAgenda_editar', { 'id': objEntidad.coAgendaOrientador }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
                         <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                     </a> 
                 </div> 
