--- a/src/sagaco/CitaBundle/Resources/views/clAgenda/index.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clAgenda/index.html.twig
@@ -54,7 +54,7 @@
                                 <a href="{{ path('pgAgenda_mostrar', { 'id': objEntidad.coAgendaOrientador, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
                                     <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                 </a>                                    
-                                <a href="{{ path('pgAgenda', { 'id': objEntidad.coAgendaOrientador }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
+                                <a href="{{ path('pgAgenda_editar', { 'id': objEntidad.coAgendaOrientador }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
                                     <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                                 </a>                                 
                             </td>
