--- a/src/sagaco/CitaBundle/Resources/views/clHorariCita/registrar.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clHorariCita/registrar.html.twig
@@ -1,12 +1,12 @@
 {% extends '::plantilla.html.twig' %}
 
-{% block id 'cita' %}
+{% block id 'horaricita' %}
    
     {% block ruta %}
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li><a href="{{ path('pgCita') }}"><small>Cita</small></a></li>
+            <li><a href="{{ path('pgHorariCita') }}"><small>Horario-Cita</small></a></li>
             <li class="active"><small>Crear</small></li>
         </ul>                              
     </div> 
@@ -17,9 +17,9 @@
         
             <fieldset>
                 {# Titulo del requisito #}
-                <legend>Crear cita
+                <legend>Crear horario-cita
                     <div class="pull-right">
-                        <a href="{{ path('pgCita') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
+                        <a href="{{ path('pgHorariCita') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
                             <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
                         </a>                       
                     </div>
@@ -29,13 +29,10 @@
                 {{ form_start(form, { 'style': 'horizontal' }) }}
                     {{ form_errors(form, { 'global_errors': true }) }}
                     {{ form_row(form._token) }}
-                    {{ form_row(form.coPersona, {'label': 'Nombre'}) }}
-                    {{ form_row(form.coPersona, {'label': 'Apellido'}) }}                    
-                    {{ form_row(form.coHorariCita, {'label': 'Fecha'}) }}                    
-                    {{ form_row(form.coHorariCita, {'label': 'H. Inicio'}) }}                    
-                    {{ form_row(form.coHorariCita, {'label': 'H. Fin'}) }}                    
-                    {{ form_row(form.coHorariCita, {'label': 'N. Orientador'}) }}                    
-                    {{ form_row(form.coHorariCita, {'label': 'A. Orientador'}) }}                    
+                    {{ form_row(form.coOrientador, {'label': 'Nombre'}) }}                   
+                    {{ form_row(form.feHorario, {'label': 'F. Horario'}) }}                    
+                    {{ form_row(form.hoInicio, {'label': 'H. Inicio'}) }}                    
+                    {{ form_row(form.hoFin, {'label': 'H. Fin'}) }}                    
                 {{ form_end(form) }}                
             </fieldset>         
             
