--- a/src/sagaco/AdminBundle/Resources/views/clEstadoCita/mostrar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clEstadoCita/mostrar.html.twig
@@ -6,7 +6,7 @@
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li><a href="{{ path('pgEstadoCita') }}"><small>Estado civil</small></a></li>
+            <li><a href="{{ path('pgEstadoCita') }}"><small>Estado cita</small></a></li>
             <li class="active"><small>Detalle</small></li>
         </ul>                              
     </div> 
@@ -17,7 +17,7 @@
         
             <fieldset>
                 {# Titulo del requisito #}
-                <legend>Detalle estado civil
+                <legend>Detalle estado cita
                     <div class="pull-right">
                         {{ form(delete_form) }}
                     </div> 
