--- a/src/sagaco/CitaBundle/Resources/views/clHorariCita/index.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clHorariCita/index.html.twig
@@ -29,49 +29,31 @@
                         <table class="table table-bordered table-striped table-condensed">
                             <thead>                            
                                 <tr>
-                                    {# sorting of properties based on query components #}
-                                    <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coHorariCita') }}</th>
-                                    <th{% if objPagina.isSorted('a.coOrientador') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Nombre', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.feHorario') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'F. Horario', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.hoInicio') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'H. Inicio', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.hoFin') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'H. Fin', 'a.nbGrupoRol') }}</th>
-                                    <th>F. Creación</th>
-                                    <th>F. Actualización</th>
-                                    <th>Acción</th>                                
+                                    <th></th>
+                                    {# Días de la semana #}
+                                    {% for fecha in objPagina %}                                        
+                                        <th> {{arrDias[fecha|date('N')]}} </th>                                        
+                                    {% endfor %}
+                                </tr>
+                                <tr>
+                                    <th> Hora </th>
+                                    {# Fecha #}
+                                    {% for tag in objPagina %}                                        
+                                        <th>{{ tag }}</th>
+                                    {% endfor %}
                                 </tr>
                             </thead>
                             <tbody>
-                            {% for objEntidad in objPagina %}
-                                <tr {% if loop.index is odd %}class="color"{% endif %}>
-                                    <td class="text-right"><a href="{{ path('pgHorariCita_mostrar', { 'id': objEntidad.coHorariCita, 'blnBandera': '0'}) }}">{{ objEntidad.coHorariCita }}</a></td>
-                                    {#<td>{{ objEntidad.coOrientador }}</td>#}
-                                    <td>Lucy</td>
-                                    <td>{% if objEntidad.feHorario %}{{ objEntidad.feHorario|date('d-m-Y') }}{% endif %}</td>
-                                    <td>{% if objEntidad.hoInicio %}{{ objEntidad.hoInicio|date('H:i:s') }}{% endif %}</td>
-                                    <td>{% if objEntidad.hoFin %}{{ objEntidad.hoFin|date('H:i:s') }}{% endif %}</td>
-                                    <td>{% if objEntidad.fhCreacion %}{{ objEntidad.fhCreacion|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td>{% if objEntidad.fhActualizacion %}{{ objEntidad.fhActualizacion|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td> 
-                                        <a href="{{ path('pgHorariCita_mostrar', { 'id': objEntidad.coHorariCita, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
-                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                        </a>                                    
-                                        <a href="{{ path('pgHorariCita_editar', { 'id': objEntidad.coHorariCita }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
-                                            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                                        </a>                                 
-                                    </td>
-                                </tr>
-                            {% endfor %}
+                                <tr>
+                                    <th> Hora </th>
+                                    {# sorting of properties based on query components #}
+                                    {% for tag in objPagina %}                                        
+                                        <th>{{ tag }}</th>
+                                    {% endfor %}                                   
+                                </tr>                            
                             </tbody>
                         </table>
-                    </div>
-                    
-                    <div class="row">                        
-                        <div class="col-sm-9 col-md-6 col-lg-8">
-                            <p> <strong>Resultado: </strong>{{ objPagina.getTotalItemCount }} filas</p>
-                        </div>
-                        <div class="col-sm-3 col-md-6 col-lg-4 pull-right">
-                            {{ knp_pagination_render(objPagina) }}
-                        </div>
-                    </div>                    
+                    </div>                 
+                                      
                 </fieldset>   
     {% endblock %}{#-- Fin Campos de la Forma #}
