--- a/app/Resources/views/plantilla.html.twig
+++ b/app/Resources/views/plantilla.html.twig
@@ -78,7 +78,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="navbar-nav nav">
-                    <li class="last dropdown open">
+                    <li class="last dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
                             Administración 1
                             <b class="caret"></b>
@@ -171,7 +171,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="last dropdown open">
+                    <li class="last dropdown ">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
                             Administración 2
                             <b class="caret"></b>
@@ -264,7 +264,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="last dropdown open">
+                    <li class="last dropdown ">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
                             Cita
                             <b class="caret"></b>
