--- a/src/sagaco/CitaBundle/Resources/views/clCita/index.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clCita/index.html.twig
@@ -14,69 +14,67 @@
     {# Campos de la Forma #}
     {% block twigformulario %}
         <fieldset>
-                {# Titulo Listar citas #}
-                <legend>Listar citas
-                    <div class="pull-right">
-                        <a href="{{ path('pgCita_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Crear">
-                            <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
-                        </a>                          
-                    </div>
-                </legend>
-                {{ bootstrap_set_style('horizontal') }}
-    
-                {#Muestra los campos del formulario#} 
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped table-condensed">
-                            <thead>                            
-                                <tr>
-                                    {# sorting of properties based on query components #}
-                                    <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coCita') }}</th>
-                                    <th{% if objPagina.isSorted('a.coPersona') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Nombre', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.coPersona') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Apellido', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.coHorariCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Fecha', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.coHorariCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'H. Inicio', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.coHorariCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'H. Fin', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.coHorariCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'N. Orientador', 'a.nbGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.coHorariCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'A. Orientador', 'a.nbGrupoRol') }}</th>
-                                    <th>F. Creación</th>
-                                    <th>F. Actualización</th>
-                                    <th>Acción</th>                                
-                                </tr>
-                            </thead>
-                            <tbody>
-                            {% for objEntidad in objPagina %}
-                                <tr {% if loop.index is odd %}class="color"{% endif %}>
-                                    <td class="text-right"><a href="{{ path('pgCita_mostrar', { 'id': objEntidad.coCita, 'blnBandera': '0'}) }}">{{ objEntidad.coCita }}</a></td>
-                                    <td>{{ objEntidad.coPersona }}</td> {# Primer nombre del obrero #}
-                                    <td>{{ objEntidad.coPersona }}</td> {# Primer apellido del obrero #}
-                                    <td>{% if objEntidad.coHorariCita %}{{ objEntidad.coHorariCita|date('d-m-Y') }}{% endif %}</td> {# Fecha de la cita #}
-                                    <td>{% if objEntidad.coHorariCita %}{{ objEntidad.coHorariCita|date('H:i:s') }}{% endif %}</td> {# Hora inicio de la cita #}
-                                    <td>{% if objEntidad.coHorariCita %}{{ objEntidad.coHorariCita|date('H:i:s') }}{% endif %}</td> {# Hora fin de la cita #}
-                                    <td>{{ objEntidad.coHorariCita }}</td> {# Primer nombre de la orientadora #}
-                                    <td>{{ objEntidad.coHorariCita }}</td> {# Primer apellido de la orientadora #}
-                                    <td>{% if objEntidad.fhCreacion %}{{ objEntidad.fhCreacion|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td>{% if objEntidad.fhActualizacion %}{{ objEntidad.fhActualizacion|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td> 
-                                        <a href="{{ path('pgCita_mostrar', { 'id': objEntidad.coCita, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
-                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                        </a>                                    
-                                        <a href="{{ path('pgCita_editar', { 'id': objEntidad.coCita }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
-                                            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                                        </a>                                 
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                    
-                    <div class="row">                        
-                        <div class="col-sm-9 col-md-6 col-lg-8">
-                            <p> <strong>Resultado: </strong>{{ objPagina.getTotalItemCount }} filas</p>
-                        </div>
-                        <div class="col-sm-3 col-md-6 col-lg-4 pull-right">
-                            {{ knp_pagination_render(objPagina) }}
-                        </div>
-                    </div>                    
-                </fieldset>   
+            {# Titulo del requisito #}
+            <legend>Listar citas
+                <div class="pull-right">
+                    <a href="{{ path('pgCita_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Solicitar">
+                        <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+                    </a>                          
+                </div>
+            </legend>
+            {{ bootstrap_set_style('horizontal') }}
+
+            {#Muestra los campos del formulario#} 
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped table-condensed">
+                    <thead> 
+                        <tr>
+                            {# sorting of properties based on query components #}
+                            <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coCita') }}</th>
+                            <th{% if objPagina.isSorted('a.coArea') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Área de atención', 'a.coArea') }}</th>
+                            <th{% if objPagina.isSorted('a.coOrientador') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Docente', 'a.coOrientador') }}</th>
+                            <th{% if objPagina.isSorted('a.coEstadoCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Estado', 'a.coEstadoCita') }}</th>
+                            <th{% if objPagina.isSorted('a.feCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'F. Cita', 'a.feCita') }}</th>
+                            <th{% if objPagina.isSorted('a.hoCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Hora', 'a.hoCita') }}</th>
+                            <th{% if objPagina.isSorted('a.fhRegistCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Hora', 'a.fhRegistCita') }}</th>
+                            <th>Acción</th>                                
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% if objPagina.getTotalItemCount == 0 %}
+                        <tr class="danger">
+                            <td colspan="9" class="text-center error"><strong>No hay resultados</strong></td>
+                        </tr>                                  
+                    {% endif %}
+                    {% for objEntidad in objPagina %}
+                        <tr {% if loop.index is odd %}class="color"{% endif %}>
+                            <td class="text-right"><a href="{{ path('pgCita', { 'id': objEntidad.coCita, 'blnBandera': '0'}) }}">{{ objEntidad.coCita }}</a></td>
+                            <td>{{ objEntidad.coOrientador }}</td>
+                            <td>{{ objEntidad.coEstadoCita }}</td>
+                            <td>{% if objEntidad.feCita %}{{ objEntidad.feCita|date('d-m-Y') }}{% endif %}</td>
+                            <td>{% if objEntidad.hoCita %}{{ objEntidad.hoCita|date('h:i a') }}{% endif %}</td>
+                            <td>{% if objEntidad.fhRegistCita %}{{ objEntidad.fhActualizacion|date('d-m-Y') }}{% endif %}</td>
+                            <td> 
+                                <a href="{{ path('pgCita', { 'id': objEntidad.coCita, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
+                                    <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                </a>                                    
+                                <a href="{{ path('pgCita', { 'id': objEntidad.coCita }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
+                                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                                </a>                                 
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="row">                        
+                <div class="col-sm-9 col-md-6 col-lg-8">
+                    <p> <strong>Resultado: </strong>{{ objPagina.getTotalItemCount }} filas</p>
+                </div>
+                <div class="col-sm-3 col-md-6 col-lg-4 pull-right">
+                    {{ knp_pagination_render(objPagina) }}
+                </div>
+            </div>                    
+        </fieldset>   
     {% endblock %}{#-- Fin Campos de la Forma #}
