--- a/src/sagaco/CitaBundle/Resources/views/clHorariCita/index.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clHorariCita/index.html.twig
@@ -54,6 +54,9 @@
                                                         {% if arrCalendario[i][j][key] != ' ' %}
                                                         <li>                                                        
                                                             <small>{{ arrCalendario[i][j][key] }}</small>
+                                                            <a href="{{ path('pgAgenda', { 'id': arrCalendario[i][j][key], 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
+                                                                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                                            </a>
                                                         </li> 
                                                         {% endif %}
                                                 {% endfor %}
